fix: Change column alignment and newsletter sign up sizing on larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,7 +307,7 @@ a:visited {
 @media screen and (min-width: 850px) {
 
     .section-container {
-        grid-auto-flow: column;
+        grid-template-columns: repeat(3, 1fr);
         margin: 0 auto;
         padding: 0 0.5rem 0 0.5rem;
         max-width: 1200px;
@@ -325,6 +325,10 @@ a:visited {
     }
 
     .name-input {
+        width: 10rem;
+    }
+
+    .subscribe-button {
         width: 10rem;
     }
 
